k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiiis-ledger
  labels:
    app.kubernetes.io/part-of: kiiis-ledger
    app.kubernetes.io/managed-by: kubectl
    kiiis.finki.mk/course: kiiis
    kiiis.finki.mk/project: expense-tracker
